--- a/packages/twenty-website/.env.example
+++ b/packages/twenty-website/.env.example
@@ -1,3 +1,4 @@
 GITHUB_TOKEN=your_github_token
 DATABASE_PG_URL=postgres://website:website@localhost:5432/website # only if using postgres
+NEXT_PUBLIC_HOST_URL=http://localhost:3000
 
