--- a/packages/twenty-chrome-extension/package.json
+++ b/packages/twenty-chrome-extension/package.json
@@ -5,19 +5,6 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "nx": "NX_DEFAULT_PROJECT=twenty-chrome-extension node ../../node_modules/nx/bin/nx.js",
-    "clean": "npx rimraf ./dist",
-    "start": "yarn clean && VITE_MODE=development vite",
-    "build": "yarn clean && npx tsc && npx vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0 --config .eslintrc.cjs",
-    "graphql:generate": "graphql-codegen",
-    "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\""
-  },
-  "dependencies": {
-    "@types/chrome": "^0.0.256"
-  },
-  "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.14"
+    "build": "npx vite build"
   }
 }
