--- a/packages/twenty-chrome-extension/tsconfig.spec.json
+++ b/packages/twenty-chrome-extension/tsconfig.spec.json
@@ -1,10 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../.cache/tsc",
     "types": ["jest", "node"]
   },
   "include": [
+    "codegen.ts",
     "vite.config.ts",
     "jest.config.ts",
     "**/*.test.ts",
