--- a/packages/twenty-server/project.json
+++ b/packages/twenty-server/project.json
@@ -118,6 +118,7 @@
     },
     "database:migrate": {
       "executor": "nx:run-commands",
+      "dependsOn": ["build"],
       "options": {
         "cwd": "packages/twenty-server",
         "commands": [
