refactor: use react-hook-form to validate Settings/DataModel/Field (#4916)
Closes #4295

--- a/packages/twenty-front/project.json
+++ b/packages/twenty-front/project.json
@@ -124,7 +124,8 @@
         "commands": [
           "npx concurrently --kill-others --success=first -n SB,TEST 'nx storybook:static {projectName} --port={args.port}' 'npx wait-on tcp:{args.port} && nx storybook:test {projectName} --port={args.port} --configuration={args.scope}'"
         ],
-        "port": 6006
+        "port": 6006,
+        "env": { "NODE_OPTIONS": "--max-old-space-size=5000" }
       },
       "configurations": {
         "docs": { "scope": "ui-docs" },
