--- a/.github/workflows/actions/task-cache/action.yaml
+++ b/.github/workflows/actions/task-cache/action.yaml
@@ -26,6 +26,7 @@ runs:
           .nx/cache
           node_modules/.cache
           packages/*/node_modules/.cache
+          packages/twenty-front/storybook-static
         key: tasks-cache-${{ github.ref_name }}-${{ inputs.tag }}-${{ steps.tasks-key.outputs.key }}${{ inputs.suffix }}-${{ github.sha }}
         restore-keys: |
           tasks-cache-${{ github.ref_name }}-${{ inputs.tag }}-${{ steps.tasks-key.outputs.key }}${{ inputs.suffix }}-
