Try fix tests (#5431)
As per title!

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ci-8-cores
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
@@ -47,6 +48,7 @@ jobs:
         storybook_scope: [pages, modules]
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
     steps:
       - name: Fetch local actions
         uses: actions/checkout@v4
@@ -67,6 +69,7 @@ jobs:
     runs-on: ci-8-cores
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
     steps:
       - name: Fetch local actions
         uses: actions/checkout@v4
@@ -85,6 +88,7 @@ jobs:
     env:
       REACT_APP_SERVER_BASE_URL: http://127.0.0.1:3000
       CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
     steps:
       - uses: actions/checkout@v4
         with:
@@ -105,6 +109,8 @@ jobs:
         run: npx nx run twenty-front:chromatic:ci
   front-task:
     runs-on: ubuntu-latest
+    env:
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
     strategy:
       matrix:
         task: [lint, typecheck, test]
