--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx vite build && sh ./scripts/inject-runtime-env.sh",
     "build:sourcemaps": "VITE_BUILD_SOURCEMAP=true NODE_OPTIONS=--max-old-space-size=4096 npx nx build",
-    "storybook:build:chromatic": "nx storybook:build",
+    "storybook:build:chromatic": "nx storybook:build --configuration=test",
     "start:prod": "NODE_ENV=production npx vite --host",
     "tsup": "npx tsup"
   },
