--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "tsup": "^8.0.1",
     "type-fest": "4.10.1",
     "typeorm": "^0.3.17",
+    "use-context-selector": "^2.0.0",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.1",
