--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.1",
     "xlsx-ugnis": "^0.19.3",
-    "zod": "^3.22.2"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
