--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/accordion": "^2.3.0",
     "@chakra-ui/system": "^2.6.0",
     "@codesandbox/sandpack-react": "^2.13.5",
+    "@dagrejs/dagre": "^1.1.2",
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
     "@emotion/react": "^11.11.1",
@@ -166,6 +167,7 @@
     "react-router-dom": "^6.4.4",
     "react-textarea-autosize": "^8.4.1",
     "react-tooltip": "^5.13.1",
+    "reactflow": "^11.11.3",
     "recoil": "^0.7.7",
     "rehype-slug": "^6.0.0",
     "remark-behead": "^3.1.0",
@@ -240,6 +242,7 @@
     "@types/bytes": "^3.1.1",
     "@types/chrome": "^0.0.267",
     "@types/crypto-js": "^4.2.2",
+    "@types/dagre": "^0.7.52",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/graphql-fields": "^1.3.6",
