5901 refactor email and calendar auto contact creation to create them by batch (#6038)
Closes #5901

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/facepaint": "^1.2.5",
     "@types/lodash.camelcase": "^4.3.7",
+    "@types/lodash.chunk": "^4.2.9",
     "@types/lodash.merge": "^4.6.7",
     "@types/lodash.pick": "^4.3.7",
     "@types/nodemailer": "^6.4.14",
@@ -114,6 +115,7 @@
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
     "lodash.camelcase": "^4.3.0",
+    "lodash.chunk": "^4.2.0",
     "lodash.compact": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
